Favicons and Live Homepage Update

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="nc, ncodeart, ncode, template, themeforest, html, website, specialty pages, html, static template, responsive, mini template, minimal template, multipurpose, trending, slideshow, kenburn, youtube, html video, video background, particle effect, cloud effect, 3d, layout, ready demo, one page, tabs, accordion, form, multipage, contact form, subscribe form, ajax form, mailchimp, getresponse, campaign monitor, icontact, constantcontact, google map, google fonts, font awesome, font icon, text animation, animations, about us , services, map widgets, slider, portfolio, color variations, bootstrap, flex, owl carousel, carousel, slider, famous template, full screen, navigation, app launch, book launch, maintenance, coming soon, under construction, fashion launch, mobile launch, gym, photographer, product intro, app intro, countdown">
     <meta name="author" content="InspiredMemories">
 
-    <title>Site is Under Construction - InspiredMemories LLP</title>
+    <title>Homepage - Welcome to the World of makeovers where we stand at the top</title>
 
     <!-- FONT-ICONS -->
     <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
@@ -43,10 +43,23 @@
     <link rel="stylesheet" href="css/custom.css">
 
     <!-- FAVICONS -->
-    <link rel="icon" href="images/favicons/favicon.ico">
-    <link rel="apple-touch-icon" href="images/favicons/apple-icon-180x180.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="images/favicons/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="images/favicons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+<link rel="manifest" href="favicon/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
 
     <style type="stylesheet">
 
@@ -76,7 +89,7 @@
 
                                 <!-- LOGO -->
                                 <a href="#" class="logo block px-w180">
-                                    <img src="images/logo.png" alt="brand">
+                                    <img src="images/logo.png" alt="IMT Logo">
                                 </a>
                                 <!-- / LOGO -->
 
@@ -149,7 +162,7 @@
                                 <!-- / TEXT ANIMATION -->
 
                                 <h6 class="f-2 bold-2 animated s008" data-animIn="fadeInUp|0.3" data-animOut="fadeOutUp|0.3" style="font-family: FuturaBook">
-                                    Time to change ourselves. So, we are upgrading our servers
+                                    We are the people who love some Inspirational Makeovers. We are a Software Company.
                                 </h6>
                             </div>
                             <!-- / MAIN-TEXT -->
@@ -163,8 +176,8 @@
                                     </div>
                                 </div>
 
-                                <a href="#" title="subscribe" data-popup="subscribe" class="nc-trigger inline-flex btn btn-reset btn-white rd sq50 flex-cc fs18 mr-r-10 rd-50 fs20 animated s008" data-animIn="fadeInUp|0.5" data-animOut="fadeOutUp|0.2" data-nc-sm="mr-10"><i class="ti-bell"></i></a>
-                                <a href="#" title="contact" data-popup="contact" class="nc-trigger inline-flex btn btn-reset btn-white rd sq50 flex-cc fs18 mr-r-10 rd-50 fs20 animated s008" data-animIn="fadeInUp|0.5" data-animOut="fadeOutUp|0.2" data-nc-sm="mr-10"><i class="ti-email"></i></a>
+                                <a href="bookings/index.html" title="Book an Appointment" class="nc-trigger inline-flex btn btn-reset btn-white rd sq50 flex-cc fs18 mr-r-10 rd-50 fs20 animated s008" data-animIn="fadeInUp|0.5" data-animOut="fadeOutUp|0.2" data-nc-sm="mr-10"><i class="ti-bell"></i></a>
+                                
                             </div>
                             <!-- / BUTTON GROUP -->
 
